# dataikos

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt
static/: index.html
